<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.imprarce.android.frencheducation.ui.greeting.reg.RegFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/value_24_dp"
        app:layout_editor_absoluteY="@dimen/value_24_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/value_24_dp"
        app:layout_editor_absoluteY="@dimen/value_24_dp" />

    <ImageView
        android:id="@+id/logo_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_60_dp"
        style="@style/LogoStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_email"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_8_dp"
        android:text="@string/your_email"
        android:textSize="@dimen/value_14_sp"
        app:layout_constraintBottom_toTopOf="@id/editText_email"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/logo_greeting" />

    <EditText
        android:id="@+id/editText_email"
        style="@style/EditTextStyle"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:minHeight="@dimen/value_48_dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/your_email"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/your_password"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_8_dp"
        android:layout_marginTop="@dimen/value_24_dp"
        android:text="@string/password_6_symbols"
        android:textSize="@dimen/value_14_sp"
        app:layout_constraintBottom_toTopOf="@id/editText_password"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/editText_email" />

    <EditText
        android:id="@+id/editText_password"
        style="@style/EditTextStyle"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/value_48_dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/your_password"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_8_dp"
        android:layout_marginTop="@dimen/value_24_dp"
        android:text="@string/confirm_password"
        android:textSize="@dimen/value_14_sp"
        app:layout_constraintBottom_toTopOf="@id/editText_confirm_password"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/editText_password" />

    <EditText
        android:id="@+id/editText_confirm_password"
        style="@style/EditTextStyle"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/value_48_dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/reg_button"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="@dimen/value_48_dp"
        android:layout_marginTop="@dimen/value_32_dp"
        android:background="@drawable/custom_button_greeting"
        android:text="@string/registration"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/editText_confirm_password" />

    <View
        android:id="@+id/center_line_left"
        android:layout_width="150dp"
        android:layout_height="@dimen/value_1_dp"
        android:layout_marginTop="@dimen/value_40_dp"
        android:background="@color/light_gray_line_reg"
        app:layout_constraintEnd_toEndOf="@id/guide_line_vertical_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/reg_button" />

    <View
        android:id="@+id/center_line_right"
        android:layout_width="150dp"
        android:layout_height="@dimen/value_1_dp"
        android:layout_marginTop="@dimen/value_40_dp"
        android:background="@color/light_gray_line_reg"
        app:layout_constraintEnd_toEndOf="@id/guide_line_vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/reg_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/value_32_dp"
        android:text="@string/or"
        android:textSize="@dimen/value_16_sp"
        app:layout_constraintEnd_toStartOf="@id/center_line_left"
        app:layout_constraintStart_toEndOf="@id/center_line_right"
        app:layout_constraintTop_toBottomOf="@id/reg_button"  />

    <Button
        android:id="@+id/reg_with_google"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="@dimen/value_48_dp"
        android:layout_marginTop="@dimen/value_32_dp"
        android:layout_marginBottom="@dimen/value_32_dp"
        android:background="@drawable/custom_button_greeting"
        android:drawableStart="@drawable/icon_google"
        android:paddingStart="@dimen/value_50_dp"
        android:paddingEnd="@dimen/value_50_dp"
        android:text="@string/with_google"
        style="@style/ButtonStyle"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>