<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/value_16_dp"
    style="@style/RecyclerViewBackgroundStyle">

    <ImageView
        android:id="@+id/big_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="@dimen/value_16_dp"
        android:layout_marginTop="@dimen/value_16_dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_plug"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16_dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/big_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_image">

        <ImageView
            android:id="@+id/small_image1"
            android:layout_width="@dimen/value_32_dp"
            android:layout_height="@dimen/value_32_dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/value_16_dp"
            android:src="@drawable/image_plug" />

        <ImageView
            android:id="@+id/small_image2"
            android:layout_width="@dimen/value_32_dp"
            android:layout_height="@dimen/value_32_dp"
            android:layout_marginStart="@dimen/value_16_dp"
            android:layout_weight="1"
            android:src="@drawable/image_plug" />

        <ImageView
            android:id="@+id/small_image3"
            android:layout_width="@dimen/value_32_dp"
            android:layout_height="@dimen/value_32_dp"
            android:layout_marginStart="@dimen/value_16_dp"
            android:layout_weight="1"
            android:src="@drawable/image_plug" />

        <ImageView
            android:id="@+id/small_image4"
            android:layout_width="@dimen/value_32_dp"
            android:layout_height="@dimen/value_32_dp"
            android:layout_marginStart="@dimen/value_16_dp"
            android:layout_weight="1"
            android:src="@drawable/image_plug" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/example_text_video"
        android:gravity="center"
        android:layout_marginTop="@dimen/value_16_dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/big_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/value_16_dp"
        android:layout_marginTop="@dimen/value_8_dp"
        android:textSize="12sp"
        android:text="@string/example_description_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/big_image"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/value_16_dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/big_image"
        app:layout_constraintTop_toBottomOf="@+id/description_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/value_16_dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image1"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/value_16_dp"
                android:layout_height="@dimen/value_16_dp"
                android:src="@drawable/icon_eye" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value_4_dp"
                android:text="@string/_100"
                android:textSize="@dimen/value_12_sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/value_16_dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image2"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/value_16_dp"
                android:layout_height="@dimen/value_16_dp"
                android:src="@drawable/icon_dislike" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value_4_dp"
                android:text="@string/_100"
                android:textSize="@dimen/value_12_sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/value_16_dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image3"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/value_16_dp"
                android:layout_height="@dimen/value_16_dp"
                android:src="@drawable/icon_like" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/value_4_dp"
                android:text="@string/_100"
                android:textSize="@dimen/value_12_sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>